Fix tile overlap when a service has multiple pods
Remove redundant flex style for `.primary-service .deployment-block`
which was overriding the `display: block` style for
`.service-multiple-targets` because it was more specific.

--- a/app/styles/_overview.less
+++ b/app/styles/_overview.less
@@ -160,11 +160,6 @@
     }
     .service-group-body {
       margin-top: 0;
-      .overview-services .primary-service {
-        .deployment-block {
-          .flex-display(@display: flex);
-        }
-      }
     }
     .alert-wrapper .alert {
       margin-bottom: @service-group-vertical-margin;
